ThemaFS gen appears fully working

--- a/encoding/gocode/binding.tmpl
+++ b/encoding/gocode/binding.tmpl
@@ -3,9 +3,9 @@ package {{ .PackageName }}
 import (
 	"embed"
 	"io/fs"
-	"path"
 	"path/filepath"
 
+    "cuelang.org/go/cue/build"
 	"github.com/grafana/thema"
 	"github.com/grafana/thema/load"
 )
@@ -53,13 +53,23 @@ func {{ .FactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (thema.
 // be translated to another version of schema in the lineage.
 //
 // This function will return an error if the [Thema invariants] are not met by
-// the lineage defined in {{ .EmbedPath }}{{ if .CUEPath }}.{{ .CUEPath }}{{end}}.
+// the lineage.
 //
 // [Thema's general invariants]: https://github.com/grafana/thema/blob/main/docs/invariants.md
 {{- end }}
 func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (thema.Lineage, error) {
-	// Load a build instance from the embedded fs
-	inst, err := load.InstancesWithThema(themaFS, path.Dir("{{ .EmbedPath }}"))
+    // Call the CUE loader.
+    //
+{{ if not .GenLoaderFunc -}}
+    // loadInstanceFor{{ .Name }} must be manually implemented in another file in this
+    // Go package.
+{{- else -}}
+	// This prepares the .cue file in which the {{ .Name }} lineage is declared for
+	// runtime use by the CUE evaluator.
+{{- end }}
+	var inst *build.Instance
+	var err error
+	inst, err = loadInstanceFor{{ .Name }}()
 	if err != nil {
 		// Errors at this point indicate a problem with basic loading of .cue file bytes,
 		// which typically means the code generator was misconfigured and a path input
@@ -70,7 +80,7 @@ func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (th
 	raw := rt.Context().BuildInstance(inst)
 	{{ if .CUEPath }}raw = raw.LookupPath(cue.ParsePath({{ .CUEPath }})){{ end }}
 
-	// Errors here indicate that:
+	// An error returned from thema.BindLineage indicates one of the following:
 	//   - The parsed path does not exist in the loaded CUE file (["github.com/grafana/thema/errors".ErrValueNotExist])
 	//   - The value at the parsed path exists, but does not appear to be a Thema
 	//     lineage (["github.com/grafana/thema/errors".ErrValueNotALineage])
@@ -82,16 +92,22 @@ func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (th
 }
 
 // type guards
-{{ if .IsConvergent }}var _ thema.ConvergentLineageFactory[{{ .Assignee }}] = {{ .FactoryFuncName }}{{ end }}
+{{- if .IsConvergent }}var _ thema.ConvergentLineageFactory[{{ .Assignee }}] = {{ .FactoryFuncName }}{{ end }}
 var _ thema.LineageFactory = {{ .BaseFactoryFuncName }}
 
 {{ if .GenEmbed -}}
 //go:embed {{ .EmbedPath }}
-var themaFS embed.FS
-{{- end }}
+var themaFSFor{{ .Name }} embed.FS
 
-{{ if .GenEmbed -}}
-func themaFSFor{{ .Name }}() fs.FS {
-// ONLY REAL OPTION IS TO DYNAMICALLY CREATE ONE
+{{ if .GenFSFunc -}}
+func getThemaFSFor{{ .Name }}() fs.FS {
+    return load.AsModFS(themaFSFor{{ .Name }}, "{{ .CueModName }}")
+}
+{{- end }}{{ end }}
+
+{{ if .GenLoaderFunc -}}
+func loadInstanceFor{{ .Name }}() (*build.Instance, error) {
+    return load.InstanceWithThema(getThemaFSFor{{ .Name }}(), "{{ .LoadDir }}")
 }
 {{- end }}
+
