--- a/encoding/gocode/binding.tmpl
+++ b/encoding/gocode/binding.tmpl
@@ -11,19 +11,19 @@ import (
 )
 
 {{ if .IsConvergent -}}
-// {{ .FactoryFuncName }} returns a [thema.ConvergentLineage] for the '{{ .Name }}' lineage.
+// {{ .FactoryFuncName }} returns a [thema.ConvergentLineage] for the '{{ .Name }}' Thema lineage.
 //
-// The lineage is the canonical specification of {{ .Name }}. It contains
-// all schema versions that have ever existed for {{ .Name }},
-// and the lenses that allow valid instances of one schema in the lineage to
-// be translated to another schema in the lineage.
+// The lineage is the canonical specification of {{ .Name }}. It contains all
+// schema versions that have ever existed for {{ .Name }}, and the lenses that
+// allow valid instances of one schema in the lineage to be translated to
+// another schema in the lineage.
+//
+// As a [thema.ConvergentLineage], the returned lineage has one primary schema, {{ .TargetSchemaVersion }},
+// which is [thema.AssignableTo] [{{ .Assignee }}], the lineage's parameterized type.
 //
 // This function will return an error if the [Thema invariants] are not met by
-// the lineage defined in {{ .EmbedPath }}{{ if .CUEPath }}.{{ .CUEPath }}{{end}}.
-//
-// As a [thema.ConvergentLineage], the returned lineage has one primary schema,
-// {{ .TargetSchemaVersion }}, which is [thema.AssignableTo] the lineage's generic parameterized
-// type, [{{ .Assignee }}].
+// the underlying lineage declaration in CUE, or if [{{ .Assignee }}] is not
+// [thema.AssignableTo] the {{ .TargetSchemaVersion }} schema.
 //
 // [Thema's general invariants]: https://github.com/grafana/thema/blob/main/docs/invariants.md
 func {{ .FactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (thema.ConvergentLineage[{{ .Assignee }}], error) {
@@ -58,8 +58,15 @@ func {{ .FactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (thema.
 // [Thema's general invariants]: https://github.com/grafana/thema/blob/main/docs/invariants.md
 {{- end }}
 func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (thema.Lineage, error) {
-    // Call the CUE loader.
+    // First, we must get the bytes of the .cue file(s) in which the "{{ .Name }}" lineage
+    // is declared, and load them into a
+    // "cuelang.org/go/cue/build".Instance.
     //
+    // For most Thema-based development workflows, these bytes should come from an embed.FS.
+    // This ensures Go is always compiled with the current state of the .cue files.
+	var inst *build.Instance
+	var err error
+
 {{ if not .GenLoaderFunc -}}
     // loadInstanceFor{{ .Name }} must be manually implemented in another file in this
     // Go package.
@@ -67,8 +74,6 @@ func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (th
 	// This prepares the .cue file in which the {{ .Name }} lineage is declared for
 	// runtime use by the CUE evaluator.
 {{- end }}
-	var inst *build.Instance
-	var err error
 	inst, err = loadInstanceFor{{ .Name }}()
 	if err != nil {
 		// Errors at this point indicate a problem with basic loading of .cue file bytes,
@@ -110,4 +115,3 @@ func loadInstanceFor{{ .Name }}() (*build.Instance, error) {
     return load.InstanceWithThema(getThemaFSFor{{ .Name }}(), "{{ .LoadDir }}")
 }
 {{- end }}
-
