gocode: Pass bind options to BindLineage correctly

--- a/encoding/gocode/binding.tmpl
+++ b/encoding/gocode/binding.tmpl
@@ -93,7 +93,7 @@ func {{ .BaseFactoryFuncName }}(rt *thema.Runtime, opts ...thema.BindOption) (th
 	//     but is invalid due to the violation of some general Thema invariant -
 	//     for example, declared schemas don't follow backwards compatibility rules,
 	//     lenses are incomplete.
-	return thema.BindLineage(raw, rt)
+	return thema.BindLineage(raw, rt, opts...)
 }
 
 // type guards
