fix(cli): include CUEPath provided on CLI to BindingConfig
The cue path (-p flag) was not being passed down to GenerateLineageBinding, so the lineage lookup was missing from generated bindings. This fixes that and also wraps the lineage in quotes (if not already present).

--- a/encoding/gocode/binding.tmpl
+++ b/encoding/gocode/binding.tmpl
@@ -5,7 +5,8 @@ import (
 	"io/fs"
 	"path/filepath"
 
-    "cuelang.org/go/cue/build"
+	{{ if .CUEPath }}"cuelang.org/go/cue"{{ end }}
+	"cuelang.org/go/cue/build"
 	"github.com/grafana/thema"
 	"github.com/grafana/thema/load"
 )
